fixed front matter on about page

--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,7 @@ title: What I Do
 					<hr />
 
 				<header>
-					<h3>A Career of Innovation and Entrepreneurship</h3>
+					<h3>Seek New and Agile Solutions</h3>
 					<p>"That's just the way it's always been done," is one of the most frustrating reasons for doing something.</p>
 				</header>
 					<p>Communication in the era of smart phones and the Internet demands an agile and tradition-challenging paradigm. In this world, change is the only constant and one must know <em>how to think</em> versus possessing static knowledge that may become obsolete in the span of years, or even months.</p>
