--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>I am a digital native who's got an eye on the big picture,<br />
+								<h2>I have an eye on the big picture,<br />
 								but also deep technical expertise.</h2>
 								<p>For the past decade, I've built successful projects that bridge stunning visuals with interactivity.<br />
 								I've built and managed diverse and agile teams, produced my own award-winning work,<br />
