more front matter rewrites, fixed social media image paths again because twitter tags are stupid

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,17 +5,30 @@ title: What I Do
 			<section>
 				<header>
 					<h3>A Career of Innovation and Entrepreneurship</h3>
-					<p>There are no easy answers in communication today.</p>
+					<p>Create art with impact.</p>
 				</header>
-				<p><span class="image right"><img src="images/paul.jpg" alt="" /></span>I strongly believe in using art and creativity as a means to affect change and influence others.  For the past five years, I have created projects that have been shown to high-level policymaking bodies in Congress and in international media.  In 2014, I lead the creation of the Asia Maritime Transparency Initiative (<a href="https://amti.csis.org" target="_blank">https://amti.csis.org</a>) with the CSIS Japan Chair. A year later, the website broke open the ongoing conflict in the South China Sea, exposing efforts by China to build military outposts on artificial atolls.</p>
-				<p>In 2010, I traveled to Haiti after its catastrophic January earthquake and produced several videos and a website on its rebuilding efforts. For that work, I won the Online News Association's annual award for best online video series and was a finalist for best multimedia website.</p>
-				<p>I am currently the Andreas C. Dracopoulos Chair in Innovation and Creativity and Director of Technology at the Center for Strategic and International Studies in Washington, D.C. I manage a team of ten video producers, developers, and designers who create visually stunning and engaging online projects in foreign policy and diplomacy.</p>
+
+				<p><span class="image right"><img src="images/paul.jpg" alt="Paul Franz" /></span>
+					I strongly believe in using art and creativity as a means to affect change and influence others. I thrive in high pressure situations that require quick thinking and creative solutions. In five years, I built a small two-person department into a thriving cornerstone for the Center for Strategic and International Studies (CSIS) in Washington, D.C. Now in 2017, there are 10 full-time video producers, web developers, and designers who are responsible for shaping the majority of CSIS's public outreach.
+				</p>
+
+				<p>
+					I have created projects that have been shown to high-level policymaking bodies in Congress and in international media. Most recently, I was the recipient of the <a href="http://shortyawards.com/9th/commission-on-countering-violent-extremism-cve-interactive-map" target="_blank">Shorty Award for Best Data Visualization in social media</a>, for spearheading and building a series of wildly successful interactive maps in 2016. In 2014, I led the creation of the Asia Maritime Transparency Initiative (<a href="https://amti.csis.org" target="_blank">https://amti.csis.org</a>) with the CSIS Japan Chair. A year later, the website broke open the ongoing conflict in the South China Sea to a broad international audience, exposing efforts by China to build military outposts on artificial atolls.
+				</p>
+
+				<p><span class="image right"><img src="images/paul_shorty.jpg" alt="Paul Franz receives the 2017 Shorty Award" /></span>
+					In 2010, I traveled to Haiti after its catastrophic January earthquake and produced several videos and a website on its rebuilding efforts. For that work, I won the Online News Association's annual award for best online video series and was a finalist for best multimedia website.
+				</p>
+
+				<p>
+					I currently hold the Andreas C. Dracopoulos Chair in Innovation and Creativity, and I am the Director of Technology at CSIS.
+				</p>
 
 					<hr />
 
 				<header>
 					<h3>Diverse Skills and Project Experience</h3>
-					<p>From editing video, writing code, and parsing data, I capture the full picture.</p>
+					<p>From editing video, writing code, and making sense of complex data, I capture the full picture.</p>
 				</header>
 
 				<p>All of the above would not have been possible had I not had an intuitive understanding of how all these diverse elements can come together to create an immersive whole. A strong, persuasive, and engaging online project can succeed only if takes advantage of all the possible tools. Click an image to learn more about my award-winning and impactful projects.</p>
@@ -40,9 +53,32 @@ title: What I Do
 					<h3>Seek New and Agile Solutions</h3>
 					<p>"That's just the way it's always been done," is one of the most frustrating reasons for doing something.</p>
 				</header>
-					<p>Communication in the era of smart phones and the Internet demands an agile and tradition-challenging paradigm. In this world, change is the only constant and one must know <em>how to think</em> versus possessing static knowledge that may become obsolete in the span of years, or even months.</p>
-					<p>I have spent a career seeing first-hand the real challenges that organizations large and small have dealt with as they adapt to this fluid landscape. Traditional solutions to this challenge are insufficient and a communication strategy must be broadly defined and not limited to vague buzzwords and corporate language.</p>
-					<p>We are not doing "e-communications," "multimedia," or anything of the sort.  We are in the <em>communications</em> business. Our work must encompass all forms of media – images, motion, audio, text, interactivity, and emerging forms like augmented and virtual reality.</p>
-					<p>But to claim that this is something special or extraordinary misses the point. Organizations must know that this is the order of communications. Any strategy that does not take this into account will fail.</p>
+
+					<p>
+						Communication in the era of smart phones and the Internet demands an agile and tradition-challenging paradigm. In this world, change is the only constant and one must know <em>how to think</em> versus possessing static knowledge that may become obsolete in the span of years, or even months.
+					</p>
+					<p>
+						I have spent a career seeing first-hand the real challenges that organizations large and small have dealt with as they adapt to this fluid landscape. Traditional solutions to this challenge are insufficient and a communication strategy must be broadly defined and not limited to vague buzzwords and corporate language.
+					</p>
+					<p>
+						We are not doing "e-communications," "multimedia," or anything of the sort.  We are in the <em>communications</em> business. <strong>Our job is to tell compelling stories, no matter the medium.</strong> Our work must encompass all forms of media – images, motion, audio, text, interactivity, and emerging forms like augmented and virtual reality.
+					</p>
+					<p>
+						But to claim that this is something special or extraordinary misses the point. Organizations must know that this is the order of communications. Any strategy that does not take this into account will fail.
+					</p>
 
 					<hr />
+
+					<header>
+						<h3>About This Website</h3>
+					</header>
+
+						<p>
+							My professional website has gone through many revisions since <a href="https://web.archive.org/web/*/www.paul-franz.com" target="_blank">I first built it</a>, reflecting different phases of my career.
+						</p>
+						<p>
+							Welcome to the 2017 version. This website is served by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a> and powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, a powerful static site generator. This iteration of my site is the best performing yet as a result. Special thanks to HTML5 UP for the compiled theme files and framework. I've modified their fine work for this website.
+						</p>
+						<p>
+							If you're not building and hosting your small project or portfolio site with GitHub, yer doin' it wrong.
+						</p>
