--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ layout: landing
 							</header>
 							<ul class="actions vertical">
 								<li><a href="mailto:paulkfranz@gmail.com" class="button fit special">E-mail me</a></li>
-								<li><a href="paul_franz_resume.pdf" target="_blaak" class="button fit">My Resumé</a></li>
+								<li><a href="paul_franz_resume.pdf" target="_blaak" class="button fit">My Résumé</a></li>
 							</ul>
 						</div>
 					</section>
