fixed spelling error (again), changed vimeo player src

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: landing
 
 								<h3>See What I'm Working on Right Now</h3>
 								<div class="videoWrapper">
-									<iframe src="https://player.vimeo.com/video/193781744?portrait=0" width="100%" height="606" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+									<iframe src="https://player.vimeo.com/video/233481538?portrait=0" width="100%" height="606" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
 							</header>
 							<!--<ul class="icons major">
@@ -40,7 +40,7 @@ layout: landing
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/everglades.jpg" alt="" /></div><div class="content">
-								<h2>Narrative Stortyelling<br />
+								<h2>Narrative Storytelling<br />
 								Through Motion and Photography</h2>
 								<p>I've traveled the world telling personal stories in Haiti, Eastern Europe, and Asia. I started as a one-man band, writing, shooting, and editing. I create documentaries and short videos from start to finish. <a href="https://www.vimeo.com/pkfranz" target="_blank">Visit my Vimeo portfolio.</a></p>
 							</div>
