2018 and image changes

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><video width="100%" autoplay loop>
-  <source src="images/india.mp4" type="video/mp4"></video></div><div class="content">
+							<div class="image"><div class="image"><img src="images/india.gif" alt="" /></div>
+							<div class="content">
 								<h2>Motion Design<br />
 								For Effortless Viewer Comprehension</h2>
 								<p>Sometimes original video or photography can't cut it alone, or the story just doesn't lend itself to a documentary. I produce animations and motion graphics to explain some of the most complex stories.</p>
