--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><div class="image"><img src="images/india.gif" alt="" /></div>
+							<div class="image"><img src="images/india.gif" alt="" /></div>
 							<div class="content">
 								<h2>Motion Design<br />
 								For Effortless Viewer Comprehension</h2>
@@ -54,7 +54,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/a2ad_map.jpg" alt="" /></video></div><div class="content">
+							<div class="image"><img src="images/a2ad_map.jpg" alt="" /></div><div class="content">
 								<h2>Interactive and informative<br />
 								data visualizations that break down complexity</h2>
 								<p>No visual project is complete without a focus on interactivity and presentation on the web. Data visualization helps unpack complex narratives. <a href="http://shortyawards.com/9th/commission-on-countering-violent-extremism-cve-interactive-map" target="_blank">I won the Shorty Award in 2017 for best data visualization</a>, beating out competition from Google, Uber, and NBC News.</p>
