--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ layout: landing
 								but also deep technical expertise.</h2>
 								<p>For the past decade, I've built successful projects that bridge stunning visuals with interactivity.<br />
 								I've built and managed diverse and agile teams, produced my own award-winning work,<br />
-								and have helped organizations <strong>do digital storytelling better.</strong></p>
+								and have helped organizations <strong>do better digital storytelling.</strong></p>
 
 								<h3>See What I'm Working on Right Now</h3>
 								<div class="videoWrapper">
-									<iframe src="https://player.vimeo.com/video/233481538?portrait=0" width="100%" height="606" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+									<iframe src="https://player.vimeo.com/video/327720405?portrait=0" width="100%" height="606" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
 							</header>
 							<!--<ul class="icons major">
@@ -105,7 +105,7 @@ layout: landing
 						<div class="inner">
 							<header>
 								<h2>Contact Me</h2>
-								<p>I am always looking for new opportunities to help organizations and individuals tell stories better. Large or small, I can augment your communications strategy in a rapidly changing landscape.</p>
+								<p>I am always looking for new opportunities to help organizations, brands, and individuals tell stories better. Large or small, I can augment your communications strategy in a rapidly changing landscape.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="mailto:paulkfranz@gmail.com" class="button fit special">E-mail me</a></li>
