content updates, resume change, new images

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ layout: landing
 								I've built and managed diverse and agile teams, produced my own award-winning work,<br />
 								and have helped organizations <strong>do better digital storytelling.</strong></p>
 
-								<h3>See What I'm Working on Right Now</h3>
+								<h3>Watch My Latest Work</h3>
 								<div class="videoWrapper">
-									<iframe src="https://player.vimeo.com/video/327720405?portrait=0" width="100%" height="606" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+									<iframe src="https://player.vimeo.com/video/347367039?portrait=0" width="100%" height="606" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
 							</header>
 							<!--<ul class="icons major">
@@ -55,9 +55,9 @@ layout: landing
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/3d_korea.jpg" alt="" /></div><div class="content">
-								<h2>Interactive and informative<br />
-								data visualizations that break down complexity</h2>
-								<p>No visual project is complete without a focus on interactivity and presentation on the web. Data visualization helps unpack complex narratives. <a href="http://shortyawards.com/9th/commission-on-countering-violent-extremism-cve-interactive-map" target="_blank">I won the Shorty Award in 2017 for best data visualization</a>, beating out competition from Google, Uber, and NBC News.</p>
+								<h2>Immersive and informative<br />
+								visualizations that break down complexity</h2>
+								<p>No visual project is complete without a focus on interactivity and presentation on the web. Effective visualization helps explain complex ideas. <a href="http://shortyawards.com/9th/commission-on-countering-violent-extremism-cve-interactive-map" target="_blank">I won the Shorty Award in 2017 for best data visualization</a>, beating out competition from Google, Uber, and NBC News.</p>
 							</div>
 						</section>
 					</section>
