2020 version updates, new resume, hed text edit

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@ title: What I Do
 				</header>
 
 				<p><span class="image right"><img src="images/paul.jpg" alt="Paul Franz" /></span>
-					I strongly believe in using art and creativity as a means to affect change and influence others. I thrive in high pressure situations that require quick thinking and creative solutions. In five years, I built a small two-person department into a thriving cornerstone for the Center for Strategic and International Studies (CSIS) in Washington, D.C. Now in 2017, there are 10 full-time video producers, web developers, and designers who are responsible for shaping the majority of CSIS's public outreach.
+					I strongly believe in using art and creativity as a means to affect change and influence others. I thrive in high pressure situations that require quick thinking and creative solutions. In five years, I built a small two-person department into a thriving cornerstone for the Center for Strategic and International Studies (CSIS) in Washington, D.C. Now in 2020, there are 18 full-time video producers, web developers, data scientists, and designers who are responsible for shaping the majority of CSIS's public outreach.
 				</p>
 
 				<p>
@@ -78,7 +78,4 @@ title: What I Do
 						</p>
 						<p>
 							Welcome to the 2020 version. This website is served by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a> and powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, a powerful static site generator. This iteration of my site is the best performing yet as a result. Special thanks to HTML5 UP for the compiled theme files and framework. I've modified their fine work for this website.
-						</p>
-						<p>
-							If you're not building and hosting your small project or portfolio site with GitHub, yer doin' it wrong.
 						</p>
