update video, other text edits

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@ title: What I Do
 				</p>
 
 				<p>
-					I currently hold the Andreas C. Dracopoulos Chair in Innovation and Creativity, and I am the Director of Technology at CSIS.
+					I was the inaugural holder of the Andreas C. Dracopoulos Chair in Innovation and Creativity at CSIS.  I am currently a nonresident Fellow for CSIS, residing in New York.
 				</p>
 
 					<hr />
