--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: landing
 
 								<h3>Watch My Latest Work</h3>
 								<div class="videoWrapper">
-									<iframe src="https://player.vimeo.com/video/377377124?portrait=0" width="100%" height="606" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+									<iframe src="https://player.vimeo.com/video/463879183?portrait=0" width="100%" height="606" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
 							</header>
 							<!--<ul class="icons major">
@@ -69,7 +69,7 @@ layout: landing
 								<h2>WHAT I CAN DO</h2>
 								<p>From producing individual projects to managing teams,<br />
 								I bring a diversity of experience and cross-disciplinary talent.<br />
-								<strong>I know what it takes to get projects done,</strong> because I've been on both sides.</p>
+								<strong>I know what it takes to get projects done.</strong></p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-video-camera">
@@ -82,7 +82,7 @@ layout: landing
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Technology Management</h3>
-									<p>I built a diverse team of ten developers, designers, and video producers at The Center for Strategic and International Studies. <a href="https://www.csis.org/programs/dracopoulos-ideas-lab/our-team" target="_blank">Meet my team.</a> </p>
+									<p>I built a diverse team of ten developers, designers, and video producers at The Center for Strategic and International Studies, the world's most well-recognized defense and international security think tank.</p>
 								</li>
 								<li class="icon fa-code">
 									<h3>Development</h3>
@@ -94,7 +94,7 @@ layout: landing
 								</li>
 								<li class="icon fa-building">
 									<h3>A Decade of Experience</h3>
-									<p>For ten years, I've been in journalism, non-profit communications, and a private consultant. I have served with TIME magazine in New York City, the Pulitzer Center for Crisis Reporting, and currently the Center for Strategic and International Studies in Washington, D.C.</p>
+									<p>For ten years, I've been in journalism, non-profit communications, and a private consultant. I have served with TIME magazine in New York City, the Pulitzer Center for Crisis Reporting, and as a nonresident Fellow with the Center for Strategic and International Studies.</p>
 								</li>
 							</ul>
 						</div>
@@ -105,11 +105,11 @@ layout: landing
 						<div class="inner">
 							<header>
 								<h2>Contact Me</h2>
-								<p>I am always looking for new opportunities to help organizations, brands, and individuals tell stories better. Large or small, I can augment your communications strategy in a rapidly changing landscape.</p>
+								<p>I am looking for new opportunities to help organizations, brands, and individuals tell stories better. Large or small, I can augment your communications strategy in a rapidly changing landscape.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="mailto:paulkfranz@gmail.com" class="button fit special">E-mail me</a></li>
-								<li><a href="paul_franz_resume.pdf" target="_blaak" class="button fit">My Résumé</a></li>
+								<li><a href="paul_franz_resume.pdf" target="_blank" class="button fit">My Résumé</a></li>
 							</ul>
 						</div>
 					</section>
