resume update, meta updates

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ layout: landing
 								</li>
 								<li class="icon fa-building">
 									<h3>A Decade of Experience</h3>
-									<p>For ten years, I've been in journalism, non-profit communications, and a private consultant. I have served with TIME magazine in New York City, the Pulitzer Center for Crisis Reporting, and as a nonresident Fellow with the Center for Strategic and International Studies.</p>
+									<p>For 15 years, I've been in journalism, non-profit communications, and a private consultant. I have served with TIME magazine in New York City, the Pulitzer Center for Crisis Reporting, International Crisis Group, the Atlantic Council, and as a nonresident Fellow with the Center for Strategic and International Studies.</p>
 								</li>
 							</ul>
 						</div>
